[gd_scene load_steps=8 format=3 uid="uid://d3su57nld13ej"]

[ext_resource type="Script" path="res://Scripts/anvil_minigame.gd" id="1_jh6bu"]
[ext_resource type="Texture2D" uid="uid://x04taujvdhrw" path="res://Assets/Sprites/metal sword.png" id="2_8rexv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mscwl"]
size = Vector2(4.71875, 6)

[sub_resource type="GDScript" id="GDScript_6ux16"]
script/source = "extends CharacterBody2D

func _physics_process(delta: float) -> void:
	move_and_slide()
"

[sub_resource type="CircleShape2D" id="CircleShape2D_pvt47"]
radius = 6.315

[sub_resource type="AtlasTexture" id="AtlasTexture_jtnpg"]
atlas = ExtResource("2_8rexv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b7umi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtnpg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="AnvilMinigame" type="Node2D"]
z_index = 50
script = ExtResource("1_jh6bu")

[node name="Sword" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Sword"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -3.0
offset_right = 20.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 3)
color = Color(0.359069, 0.359069, 0.359069, 1)

[node name="MinX" type="Area2D" parent="Sword"]
position = Vector2(-10, 0)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/MinX"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_mscwl")

[node name="MaxX" type="Area2D" parent="Sword"]
position = Vector2(10, 0)
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/MaxX"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_mscwl")

[node name="Sweetspot" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Sweetspot"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -3.0
offset_right = 10.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(10, 3)
color = Color(0.984314, 0.286275, 0.203922, 1)

[node name="MinX" type="Node2D" parent="Sweetspot"]
position = Vector2(-10, 0)

[node name="MaxX" type="Node2D" parent="Sweetspot"]
position = Vector2(10, 0)

[node name="Hammer" type="CharacterBody2D" parent="."]
collision_layer = 128
collision_mask = 128
script = SubResource("GDScript_6ux16")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hammer"]
scale = Vector2(0.475059, 0.475059)
shape = SubResource("CircleShape2D_pvt47")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Hammer"]
scale = Vector2(0.359999, 0.359999)
sprite_frames = SubResource("SpriteFrames_b7umi")

[node name="MinX" type="Node2D" parent="Hammer"]
position = Vector2(-3, 0)

[node name="MaxX" type="Node2D" parent="Hammer"]
position = Vector2(3, 0)

[connection signal="body_entered" from="Sword/MinX" to="." method="_on_min_x_body_entered"]
[connection signal="body_entered" from="Sword/MaxX" to="." method="_on_max_x_body_entered"]
